# be2r_cmpc_unitree

./: .clang-format  CMakeLists.txt  README.md  config.h.cmake  format_code.sh  package.xml
src/common/: CMakeLists.txt
src/common/ControlParameters/: MIT_UserParameters.h
src/common/Controllers/: ContactEstimator.h  DesiredStateCommand.cpp  DesiredStateCommand.h  FootSwingTrajectory.cpp  FootSwingTrajectory.h  GaitScheduler.cpp  GaitScheduler.h  LegController.cpp  LegController.h  MyPositionVelocityEstimator.cpp  MyPositionVelocityEstimator.h  OrientationEstimator.cpp  PositionVelocityEstimator.cpp  PositionVelocityEstimator.h  StateEstimatorContainer.h  be2rPositionVelocityEstimator.cpp  be2rPositionVelocityEstimator.h
src/common/Dynamics/: FloatingBaseModel.cpp  FloatingBaseModel.h  MiniCheetah.h  Quadruped.h  spatial.h
src/common/FootstepPlanner/: GraphSearch.cpp  GraphSearch.h
src/common/Math/: Interpolation.h  orientation_tools.h
src/common/SimUtilities/: GamepadCommand.cpp  GamepadCommand.h  SpineBoard.h  VisualizationData.h
src/common/SparseCMPC/: OsqpTriples.cpp  SparseCMPC.cpp  SparseCMPC.h
src/common/Utilities/: SpiralIterator.cpp  SpiralIterator.hpp  cppTypes.h  qp_controller_data_t.hpp  ros_read_param.h  save_file.h  sim_command_t.hpp  utilities.cpp  utilities.h
src/common/debug/: debug.cpp  debug.hpp
src/common/include/Controllers/: ContactEstimator.h  GaitScheduler.h  PositionVelocityEstimator.h  StateEstimatorContainer.h
src/common/include/Dynamics/: MiniCheetah.h  SpatialInertia.h
src/common/include/SimUtilities/: IMUTypes.h  SpineBoard.h
src/common/metrics/: ContactEnergy.cpp  ContactEnergy.h  ContactForce.cpp  ContactForce.h  CostFunc_MPC.cpp  CostFunc_MPC.h  EnergyConsume.cpp  EnergyConsume.h  Metric.cpp  Metric.h  Metrics.cpp  SystemEnergy.cpp  SystemEnergy.h
src/common/reference_trajectory_generator/: reference_trajectory_generator.cpp  reference_trajectory_generator.h
src/common/src/ControlParameters/: ControlParameters.cpp
src/common/src/Controllers/: PositionVelocityEstimator.cpp
src/common/src/Dynamics/: FloatingBaseModel.cpp
src/controllers/: CMakeLists.txt
src/controllers/BackFlip/: DataReadCtrl.hpp  DataReader.cpp
src/controllers/BalanceController/: BalanceController.cpp  BalanceController.hpp  BalanceControllerVBL.cpp  BalanceControllerVBL.hpp  BalanceControllerWrapper.cpp  BalanceControllerWrapper.h  ReferenceGRF.cpp  ReferenceGRF.hpp
src/controllers/CMPC/: CMPC_Locomotion.cpp  CMPC_Locomotion.h  CMPC_Locomotion_cv.cpp  CMPC_Locomotion_cv.h  Gait_contact.cpp  Gait_contact.h
src/controllers/VisionMPC/: CMakeLists.txt  VisionMPCLocomotion.cpp  VisionMPCLocomotion.h  VisionMPCLocomotion_copy.txt  VisionMPC_interface.cpp  VisionMPC_interface.h  VisionSolverMPC.cpp
src/controllers/WBC/: ContactSpec.hpp  WBC.hpp
src/controllers/WBC/WBIC/: CMakeLists.txt  KinWBC.cpp  KinWBC.hpp  WBIC.cpp  WBIC.hpp
src/controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.cpp  WBC_Ctrl.hpp
src/controllers/WBC_Ctrl/LocomotionCtrl/: LocomotionCtrl.cpp  LocomotionCtrl.hpp
src/controllers/WBC_Ctrl/TaskSet/: BodyOriTask.cpp  BodyOriTask.hpp  BodyPosTask.hpp  LinkPosTask.cpp  LinkPosTask.hpp  LocalPosTask.cpp
src/controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  ConvexMPCStairsLocomotion.cpp  ConvexMPCStairsLocomotion.h  Gait.cpp  Gait.h  Metrics.cpp  Metrics.h  RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  Test.cpp  Test.h  convexMPC_interface.cpp  convexMPC_interface.h
src/fsm/: CMakeLists.txt  ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  SafetyChecker.cpp  SafetyChecker.h  TransitionData.h
src/fsm/fsm_states/: FSM_State_BackFlip.cpp  FSM_State_BackFlip.h  FSM_State_BalanceStand.cpp  FSM_State_BalanceStand.h  FSM_State_BalanceVBL.cpp  FSM_State_BalanceVBL.h  FSM_State_FrontJump.cpp  FSM_State_FrontJump.h  FSM_State_ImpedanceControl.cpp  FSM_State_JointPD.cpp  FSM_State_JointPD.h  FSM_State_LayDown.cpp  FSM_State_LayDown.h  FSM_State_Locomotion.cpp  FSM_State_Locomotion.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_RecoveryStand.cpp  FSM_State_RecoveryStand.h  FSM_State_Stairs.cpp  FSM_State_Stairs.h  FSM_State_StandUp.cpp  FSM_State_StandUp.h  FSM_State_Testing.cpp  FSM_State_Testing.h  FSM_State_Testing_cv.cpp  FSM_State_Testing_cv.h  FSM_State_Vision.cpp  FSM_State_Vision.h
src/mit/: CMakeLists.txt  MIT_Controller.cpp  MIT_Controller.hpp  MIT_UserParameters.h
src/mit/common/: CMakeLists.txt
src/mit/common/include/ControlParameters/: ControlParameters.h  RobotParameters.h
src/mit/common/include/Controllers/: DesiredStateCommand.h  FootSwingTrajectory.h  LegController.h  OrientationEstimator.h  StateEstimatorContainer.h
src/mit/common/include/Dynamics/: ActuatorModel.h
src/mit/common/include/SimUtilities/: GamepadCommand.h  VisualizationData.h
src/mit/common/include/SparseCMPC/: SparseCMPC.h
src/mit/common/include/Utilities/: PeriodicTask.h  Timer.h  utilities.h
src/mit/common/src/Controllers/: DesiredStateCommand.cpp  GaitScheduler.cpp  LegController.cpp  OrientationEstimator.cpp
src/mit/common/src/Dynamics/: Quadruped.cpp
src/mit/controllers/BackFlip/: BackFlipCtrl.hpp  DataReader.hpp
src/mit/controllers/BalanceController/: BalanceController.hpp
src/mit/controllers/WBC/: Task.hpp
src/mit/controllers/WBC_Ctrl/: CMakeLists.txt  WBC_Ctrl.hpp
src/mit/controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h
src/mit/fsm_states/: ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_BackFlip.cpp  FSM_State_BackFlip.h  FSM_State_BalanceStand.cpp  FSM_State_BalanceStand.h  FSM_State_ImpedanceControl.cpp  FSM_State_Locomotion.cpp  FSM_State_StandUp.cpp  FSM_State_Vision.h  SafetyChecker.cpp
src/mit/robot/: CMakeLists.txt
src/mit/robot/include/: HardwareBridge.h  RobotController.h  RobotRunner.h  SimulationBridge.h  main_helper.h
src/mit/robot/include/rt/: rt_spi.h  (+1 more)
src/mit/robot/src/: HardwareBridge.cpp  JPosInitializer.cpp  RobotRunner.cpp  SimulationBridge.cpp  main_helper.cpp
(+57 files in other folders)
